[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "wex"
version = "6.0.128"
description = "A friendly CLI"
authors = [
    { name = "weeger", email = "contact@wexample.com" },
]
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent"]
dependencies = [
    "tomli",
    "wexample-wex-addon-ai>=11.3.1",
    "wexample-wex-addon-app>=26.2.0",
    "wexample-wex-addon-dev-css>=6.0.68",
    "wexample-wex-addon-dev-javascript>=7.15.1",
    "wexample-wex-addon-dev-php>=8.12.1",
    "wexample-wex-addon-dev-python>=12.1.0",
    "wexample-wex-addon-filestate>=6.2.18",
    "wexample-wex-addon-master>=9.2.0",
    "wexample-wex-addon-package>=7.5.2",
    "wexample-wex-addon-services-collab>=11.7.2",
    "wexample-wex-addon-services-db>=11.8.3",
    "wexample-wex-addon-services-monitoring>=7.9.3",
    "wexample-wex-addon-services-platform>=12.7.2",
    "wexample-wex-core>=28.1.0",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
homepage = "https://github.com/wexample/wex"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["*"]
exclude = ["wex.testing*"]

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"

[[tool.pdm.build.packages]]
include = "wex"
from = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--color=yes"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/.venv/*", "*/venv/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "def __repr__", "raise AssertionError", "raise NotImplementedError", "if __name__ == .__main__.:", "if TYPE_CHECKING:", "@abstractmethod"]
